--- a/styles.css
+++ b/styles.css
@@ -421,7 +421,7 @@ section h2 {
 }
 
 .ooty-reasons, .manali-reasons, .munnar-reasons,.kodaikanal-reasons,.coorg-reasons 
-.goa-reasons, .andaman-reasons, .pondicherry-reasons, .alleppey-reasons, .maldives-reason 
+.goa-reasons, .andaman-reasons, .pondicherry-reasons, .alleppey-reasons, .maldives-reasons 
 .taj-mahal-reasons, .hampi-reasons, .qutub-minar-reasons, .ajanta-ellora-reasons
 .jim-corbett-reasons, .kaziranga-reasons, .periyar-reasons, .gir-reasons .keoladeo-reasons
 .tirupati-reasons,.arunachalam-reasons,.varanasi-reasons,.amritsar-reasons,.haridwar-reasons
@@ -441,7 +441,7 @@ section h2 {
 .andaman-reasons { background-color: #bbdefb; }
 .pondicherry-reasons { background-color: #fff9c4; }
 .alleppey-reasons { background-color: #e8f5e9; }
-.maldives-reason{background-color: #a1d0f5;}
+.maldives-reasons{background-color: #a1d0f5;}
 .taj-mahal-reasons{ background-color: aliceblue;}
 .hampi-reasons{background-color:#ebe2e6;}
 .qutub-minar-reasons{background-color:#f1faee ;}
